# python-demos

./: ReadMe.md
Pydantic/: Overview.md  pyproject.toml  sql_app.db
Pydantic/api/: crud.py  main.py  models.py  sql_app.db
Pydantic/ui/: app.py
