[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydantic-user-registration"
version = "0.1.0"
description = "A user registration system using FastAPI, Pydantic, and Streamlit"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "pydantic[email]>=2.5.0",
    "streamlit>=1.28.0",
    "requests>=2.31.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.11.0",
    "ruff>=0.1.6",
]

[tool.hatch.build.targets.wheel]
packages = ["api", "ui"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.3",
    "black>=23.11.0",
    "ruff>=0.1.6",
]